--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css codes/style.css">
-  <link rel="stylesheet" href="/css codes/mobo.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="mobo.css">
   <title>MY FOODY FRIEND</title>
 </head>
 
@@ -48,7 +48,7 @@
   <h1 class="title">Trending Meals </h1>
   <section id="trending">
     <div class="trendingItems">
-      <img src="/images/pizza.jpg" alt="">
+      <img src="pizza.jpg" alt="">
       <h2>Pizza</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam eligendi distinctio consectetur. Temporibus
         quasi odio deleniti nisi harum fugit voluptatibus?
@@ -56,7 +56,7 @@
       <button class="btn">Order Now</button>
     </div>
     <div class="trendingItems">
-      <img src="/images/cake.jpg" alt="">
+      <img src="cake.jpg" alt="">
       <h2>Cake</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam eligendi distinctio consectetur. Temporibus
         quasi odio deleniti nisi harum fugit voluptatibus?
@@ -64,7 +64,7 @@
       <button class="btn">Order Now</button>
     </div>
     <div class="trendingItems">
-      <img src="/images/duffling.jpg" alt="">
+      <img src="duffling.jpg" alt="">
       <h2>Duffling</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam eligendi distinctio consectetur. Temporibus
         quasi odio deleniti nisi harum fugit voluptatibus?
@@ -77,10 +77,10 @@
   <!-- clients section  -->
   <h1 class="title">Our Clients </h1>
   <section id="clients">
-    <img src="/images/Apple-Logo new.jpg" alt="">
-    <img src="/images/hp logo.png" alt="">
-    <img src="/images/microsoft.png" alt="">
-    <img src="/images/tata logo.png" alt="">
+    <img src="Apple-Logo new.jpg" alt="">
+    <img src="hp logo.png" alt="">
+    <img src="microsoft.png" alt="">
+    <img src="tata logo.png" alt="">
   </section>
 
   <!-- contact us section and input form  -->
@@ -98,7 +98,7 @@
 
     <label for="query">Tell Us About Your Query</label>
     <textarea name="" id="query" cols="30" rows="10"> Write your query here </textarea>
-      
+    <button type="submit" class="btn">Submit</button>
   </section>
  
   <div id="copyrights">&copy; &nbsp;Copyrights All rights reserved to Shivam Singh</div>
